--- a/html/nso/pt/index.html
+++ b/html/nso/pt/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
 	</head>
 	<body>
+		<div id="gameAdvance"></div>
 		<div id="pt1" style="width: 50%; vertical-align:top; display: inline-block"></div><!-- 
 	 --><div id="pt2" style="width: 50%; vertical-align:top; display: inline-block"></div>
 		<div id="PenaltyEditor"></div>
