--- a/html/nso/sbo/index.html
+++ b/html/nso/sbo/index.html
@@ -38,6 +38,7 @@
 <div id="tabsDiv">
 	<div id="operatorIdDiv">Operator: <a id="operatorId"></a></div>
 	<a id="indexLink" href="/">Back to index page</a>
+	<div id="gameAdvance"></div>
 	<ul id="tabBar"></ul>
 </div>
 
