--- a/html/nso/jt/index.html
+++ b/html/nso/jt/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body sbContext="ScoreBoard">
+<body sbContext="ScoreBoard.CurrentGame">
 
 <div data-role="page" id="Main">
 	<div data-role="header">
