--- a/html/nso/plt/index.html
+++ b/html/nso/plt/index.html
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" href="/components/lt-sheet.css" type="text/css" />
 	</head>
 	<body>
+		<div id="gameAdvance"></div>
 		<div id="input"></div>
 		<div id="sheet" width="100%"></div>
 		<div id="PenaltyEditor"></div>
