--- a/html/nso/sbo/index.html
+++ b/html/nso/sbo/index.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="/external/jquery/jquery.js"></script>
 <script type="text/javascript" src="/javascript/keycontrols.js"></script>
 <script type="text/javascript" src="/javascript/utils.js"></script>
+<script type="text/javascript" src="/javascript/windowfunctions.js"></script>
 <script type="text/javascript" src="/json/core.js"></script>
 <script type="text/javascript" src="/json/WSutils.js"></script>
 
