--- a/html/nso/sbo/index.html
+++ b/html/nso/sbo/index.html
@@ -22,14 +22,14 @@
 <script type="text/javascript" src="/components/rulesets-tab.js"></script>
 <script type="text/javascript" src="/components/settings-tab.js"></script>
 <script type="text/javascript" src="/components/teams-tab.js"></script>
-<script type="text/javascript" src="/components/data-management-tab.js"></script>
+<script type="text/javascript" src="/components/igrf-tab.js"></script>
 
 <link rel="stylesheet" href="/components/sk-sheet.css" type="text/css" />
 <link rel="stylesheet" href="/components/team-time-tab.css" type="text/css" />
 <link rel="stylesheet" href="/components/rulesets-tab.css" type="text/css" />
 <link rel="stylesheet" href="/components/settings-tab.css" type="text/css" />
 <link rel="stylesheet" href="/components/teams-tab.css" type="text/css" />
-<link rel="stylesheet" href="/components/data-management-tab.css" type="text/css" />
+<link rel="stylesheet" href="/components/igrf-tab.css" type="text/css" />
 
 
 </head>
