--- a/html/index.html
+++ b/html/index.html
@@ -89,22 +89,32 @@ $(function() {
   <div class="row">
     <div class="column">
         <div class="btn">
-          <h2><span class="fa fa-2x fa-gamepad"></span> OPERATOR &amp CONTROLS</h2>
+          <h2><span class="fa fa-2x fa-desktop"></span> DISPLAYS</h2>
           <ul>
-            <li><a class="curGame" href="nso/sbo?game="><strong>Scoreboard Operator Panel</strong></a></li>
-            <li><a href="nso/jt">Jam Timer (Mobile Control)</a></li>
+            <li><a href="views/standard"><strong>Main Scoreboard</strong></a></li>
+          </ul>
+          <ul>
+            <li><a class="curGame" href="views/wb?game=">Penalty Whiteboard Display</a></li>
+            <li><a href="custom/">Custom Screens</a></li>
           </ul>
         </div>
         <div class="btn">
-          <h2><span class="fa fa-2x fa-desktop"></span> SCOREBOARD DISPLAY</h2>
+          <h2><span class="fa fa-2x fa-video-camera"></span> BROADCAST OVERLAYS</h2>
           <ul>
-            <li><a href="views/standard"><strong>Main Scoreboard</strong></a></li>
+            <li><a href="views/overlay">Broadcast Overlay</a></li>
+            <li><a href="views/overlay/admin">Overlay Admin Page</a></li>
           </ul>
         </div>
     </div><!-- column -->
     <div class="column">
         <div class="btn">
-          <h2><span class="fa fa-2x fa-list-alt"></span> STATS TRACKING</h2>
+          <h2><span class="fa fa-2x fa-gamepad"></span> INPUTS</h2>
+          <ul>
+            <li><a class="curGame" href="nso/sbo?game="><strong>Scoreboard Operator Panel</strong></a></li>
+          </ul>
+          <ul>
+            <li><a href="nso/jt">Jam Timer (Mobile Control)</a></li>
+          </ul>
           <ul>
             <li><a class="curGame" href="nso/pt?game=">Penalty Tracking</a></li>
           </ul>
@@ -114,36 +124,16 @@ $(function() {
           <ul>
             <li><a class="curGame" href="nso/plt?game=">Penalty + Lineup Tracking</a></li>
           </ul>
+        </div>
+        <div class="btn">
+          <h2><span class="fa fa-2x fa-list-alt"></span> MANAGE DATA</h2>
           <ul>
-            <li><a class="curGame" href="views/wb?game=">Penalty Whiteboard Display</a></li>
-          </ul>
-          <ul>
-            <li><a class="curGame" href="views/copy?game=">Copy to Statsbook</a></li>
+            <li><a href="settings/sb_data">Games / Teams / Rulesets</a></li>
+            <li><a href="settings/file_management">Files</a></li>
           </ul>
         </div>
     </div><!-- column -->
     <div class="column">
-        <div class="btn">
-          <h2><span class="fa fa-2x fa-video-camera"></span> BROADCAST OVERLAYS</h2>
-          <ul>
-            <li><a href="views/overlay">Broadcast Overlay</a></li>
-            <li><a href="views/overlay/admin">Overlay Admin Page</a></li>
-          </ul>
-        </div>
-        <div class="btn">
-          <h2><span class="fa fa-2x fa-cogs"></span> UTILITIES &amp; SETTINGS</h2>
-          <ul>
-            <li><a href="settings/rulesets">Ruleset Editor</a></li>
-            <li><a href="settings/scoreboard">ScoreBoard Settings</a></li>
-            <li><a href="settings/teams">Teams Editor</a></li>
-            <li><a href="settings/data_management">Up / Download</a></li>
-            <li><a href="custom/">Custom Screens</a></li>
-            <li><a href="settings/twitter">Twitter Controls</a></li>
-            <li><a href="settings/devices">Devices</a></li>
-          </ul>
-        </div>
-      </div><!-- column -->
-      <div class="column">
         <div class="btn" style="text-align: left;">
           <h2><span class="fa fa-2x fa-info-circle"></span> DOCUMENTATION</h2>
            	  <ul>
@@ -151,6 +141,16 @@ $(function() {
            	    <li>Local <a href="documentation/wiki-snapshot.html" target="_blank">Wiki-Snapshot</a> (available without internet; taken when this version was released)
            	  </ul>
 		</div>      
+        <div class="btn">
+          <h2><span class="fa fa-2x fa-cogs"></span> UTILITIES &amp; SETTINGS</h2>
+          <ul>
+            <li><a href="settings/scoreboard">ScoreBoard Settings</a></li>
+            <li><a href="settings/twitter">Twitter Controls</a></li>
+            <li><a href="settings/devices">Devices</a></li>
+          </ul>
+        </div>
+      </div><!-- column -->
+      <div class="column">
         <div class="btn" style="text-align: left;">
           <h2><span class="fa fa-2x fa-info-circle"></span> INFO</h2>
             <div style="padding: 4px; font-size: 80%;">
