--- a/html/settings/rulesets/index.html
+++ b/html/settings/rulesets/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Ruleset Editor</title>
-		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
-		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="/components/rulesets-tab.js"></script>
+  <head>
+    <title>Edit Ruleset</title>
+    <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/json/core.js"></script>
+    <script type="text/javascript" src="/javascript/utils.js"></script>
+    <script type="text/javascript" src="/json/WSutils.js"></script>
+    <script type="text/javascript" src="/components/rulesets-tab.js"></script>
 
-		<link rel="stylesheet" href="/components/rulesets-tab.css" type="text/css" />
-	</head>
-	<body>
-		<div id="RulesetsTab" class="ui-widget">
-		</div>
-	</body>
+    <link rel="stylesheet" href="/components/rulesets-tab.css" type="text/css" />
+  </head>
+  <body>
+    <div id="RulesetsTab" class="ui-widget"></div>
+  </body>
 </html>
