--- a/html/settings/teams/index.html
+++ b/html/settings/teams/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Teams Editor</title>
-		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
-		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="/javascript/utils.js"></script>
-		<script type="text/javascript" src="/components/teams-tab.js"></script>
+  <head>
+    <title>Edit Teams</title>
+    <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/json/core.js"></script>
+    <script type="text/javascript" src="/javascript/utils.js"></script>
+    <script type="text/javascript" src="/json/WSutils.js"></script>
+    <script type="text/javascript" src="/components/teams-tab.js"></script>
 
-		<link rel="stylesheet" href="/components/teams-tab.css" type="text/css" />
-	</head>
-	<body>
-		<div id="TeamsTab" class="ui-widget">
-		</div>
-	</body>
+    <link rel="stylesheet" href="/components/teams-tab.css" type="text/css" />
+  </head>
+  <body>
+    <div id="TeamsTab" class="ui-widget"></div>
+  </body>
 </html>
