format html & js with prettier, css with css-compact

--- a/html/settings/sb_data/index.html
+++ b/html/settings/sb_data/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html><head><title>CRG ScoreBoard: Data Management</title>
+<html>
+  <head>
+    <title>CRG ScoreBoard: Data Management</title>
 
-<script type="text/javascript" src="/external/jquery/jquery.js"></script>
-<script type="text/javascript" src="/json/core.js"></script>
-<script type="text/javascript" src="/javascript/utils.js"></script>
-<script type="text/javascript" src="/components/data-tab.js"></script>
+    <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/json/core.js"></script>
+    <script type="text/javascript" src="/javascript/utils.js"></script>
+    <script type="text/javascript" src="/components/data-tab.js"></script>
 
-<link rel="stylesheet" href="/components/data-tab.css" type="text/css" />
+    <link rel="stylesheet" href="/components/data-tab.css" type="text/css" />
+  </head>
 
-</head>
-
-<body>
-
-<div id="sbData">
-</div>
-
-</body>
-
+  <body>
+    <div id="sbData"></div>
+  </body>
 </html>
-
