--- a/html/controls/twitter_auth.html
+++ b/html/controls/twitter_auth.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html><head><title>CRG ScoreBoard: Twitter Auth Return Page</title>
+<html>
+  <head>
+    <title>CRG ScoreBoard: Twitter Auth Return Page</title>
 
-<!--
+    <!--
  Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 
  This file is part of the Carolina Rollergirls (CRG) ScoreBoard.
@@ -10,21 +12,17 @@
  See the file COPYING for details.
 -->
 
-<script type="text/javascript" src="/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/external/jquery/jquery.js"></script>
 
-<script type="text/javascript" src="/json/core.js"></script>
+    <script type="text/javascript" src="/json/core.js"></script>
+  </head>
 
-</head>
-
-<body>
-
-<center>
-<h2>Processing Twitter authorization, please wait...</h2>
-If you are not redirected, <a href="/settings/twitter">click here</a>
-<br/>
-<a id="error"></a>
-</center>
-
-</body>
-
+  <body>
+    <center>
+      <h2>Processing Twitter authorization, please wait...</h2>
+      If you are not redirected, <a href="/settings/twitter">click here</a>
+      <br />
+      <a id="error"></a>
+    </center>
+  </body>
 </html>
