--- a/html/nso/pt/index.html
+++ b/html/nso/pt/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Penalty Tracker</title>
-		<!--
+  <head>
+    <title>Penalty Tracker</title>
+    <!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 		
 		 This file is part of the Carolina Rollergirls (CRG) ScoreBoard.
@@ -10,17 +10,19 @@
 		 License version 3 (or later), or the Apache License 2.0, at your option.
 		 See the file COPYING for details.
 		-->
-		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
-		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="/javascript/windowfunctions.js"></script>
-		<script type="text/javascript" src="/components/plt-input.js"></script>
-		<link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
-	</head>
-	<body>
-		<div id="gameAdvance"></div>
-		<div id="pt1" style="width: 50%; vertical-align:top; display: inline-block"></div><!-- 
-	 --><div id="pt2" style="width: 50%; vertical-align:top; display: inline-block"></div>
-		<div id="PenaltyEditor"></div>
-		<div id="OptionsDialog"></div>
-	</body>
+    <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/json/core.js"></script>
+    <script type="text/javascript" src="/javascript/windowfunctions.js"></script>
+    <script type="text/javascript" src="/components/plt-input.js"></script>
+    <link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
+  </head>
+  <body>
+    <div id="gameAdvance"></div>
+    <div id="pt1" style="width: 50%; vertical-align: top; display: inline-block"></div>
+    <!-- 
+	 -->
+    <div id="pt2" style="width: 50%; vertical-align: top; display: inline-block"></div>
+    <div id="PenaltyEditor"></div>
+    <div id="OptionsDialog"></div>
+  </body>
 </html>
