--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Devices</title>
-		<!--
+  <head>
+    <title>Devices</title>
+    <!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 		
 		 This file is part of the Carolina Rollergirls (CRG) ScoreBoard.
@@ -10,32 +10,35 @@
 		 License version 3 (or later), or the Apache License 2.0, at your option.
 		 See the file COPYING for details.
 		-->
-		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
-		<script type="text/javascript" src="/javascript/windowfunctions.js"></script>
-		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="/json/WSutils.js"></script>
-	</head>
-	<body>
-		<div class="Buttons"></div><br>
-		<div id="writeAccess">Write access for new devices: </div><br>
-		<div id="writeAccessLocal">Devices appearing to be on the computer running CRG: </div><br>
-		<table class="Devices">
-			<thead>
-				<tr>
-					<th rowspan=2>Name</th>
-					<th rowspan=2>Access</th>
-					<th>Comment</th>
-					<th rowspan=2>Platform</th>
-					<th rowspan=2>Address</th>
-					<th rowspan=2>Last<br/>Seen</th>
-					<th rowspan=2>Last<br/>Write</th>
-					<th rowspan=2>Age</th>
-				</tr>
-				<tr>
-					<th>Page</th>
-				</tr>
-			</thead>
-		</table>
-		<p>Page and Platform are provided by the client.</p>
-	</body>
+    <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/javascript/windowfunctions.js"></script>
+    <script type="text/javascript" src="/json/core.js"></script>
+    <script type="text/javascript" src="/json/WSutils.js"></script>
+  </head>
+  <body>
+    <div class="Buttons"></div>
+    <br />
+    <div id="writeAccess">Write access for new devices:</div>
+    <br />
+    <div id="writeAccessLocal">Devices appearing to be on the computer running CRG:</div>
+    <br />
+    <table class="Devices">
+      <thead>
+        <tr>
+          <th rowspan="2">Name</th>
+          <th rowspan="2">Access</th>
+          <th>Comment</th>
+          <th rowspan="2">Platform</th>
+          <th rowspan="2">Address</th>
+          <th rowspan="2">Last<br />Seen</th>
+          <th rowspan="2">Last<br />Write</th>
+          <th rowspan="2">Age</th>
+        </tr>
+        <tr>
+          <th>Page</th>
+        </tr>
+      </thead>
+    </table>
+    <p>Page and Platform are provided by the client.</p>
+  </body>
 </html>
