--- a/html/settings/file_management/index.html
+++ b/html/settings/file_management/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html><head><title>CRG ScoreBoard: File Management</title>
+<html>
+  <head>
+    <title>CRG ScoreBoard: File Management</title>
 
-<script type="text/javascript" src="/external/jquery/jquery.js"></script>
-<script type="text/javascript" src="/json/core.js"></script>
-<script type="text/javascript" src="/javascript/utils.js"></script>
-<script type="text/javascript" src="/components/file-management-tab.js"></script>
+    <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/json/core.js"></script>
+    <script type="text/javascript" src="/javascript/utils.js"></script>
+    <script type="text/javascript" src="/components/file-management-tab.js"></script>
 
-<link rel="stylesheet" href="/components/file-management-tab.css" type="text/css" />
+    <link rel="stylesheet" href="/components/file-management-tab.css" type="text/css" />
+  </head>
 
-</head>
-
-<body>
-
-<div id="tabsDiv">
-</div>
-
-</body>
-
+  <body>
+    <div id="tabsDiv"></div>
+  </body>
 </html>
-
