--- a/html/settings/scoreboard/index.html
+++ b/html/settings/scoreboard/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>ScoreBoard Settings</title>
-		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
-		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="/json/WSutils.js"></script>
-		<script type="text/javascript" src="/javascript/utils.js"></script>
-		<script type="text/javascript" src="/components/settings-tab.js"></script>
+  <head>
+    <title>ScoreBoard Settings</title>
+    <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/json/core.js"></script>
+    <script type="text/javascript" src="/json/WSutils.js"></script>
+    <script type="text/javascript" src="/javascript/utils.js"></script>
+    <script type="text/javascript" src="/components/settings-tab.js"></script>
 
-		<link rel="stylesheet" href="/components/settings-tab.css" type="text/css" />
-	</head>
-	<body>
-		<div id="ScoreBoardSettings" class="ui-widget">
-		</div>
-	</body>
+    <link rel="stylesheet" href="/components/settings-tab.css" type="text/css" />
+  </head>
+  <body>
+    <div id="ScoreBoardSettings" class="ui-widget"></div>
+  </body>
 </html>
