--- a/html/nso/plt/index.html
+++ b/html/nso/plt/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="/json/core.js"></script>
     <script type="text/javascript" src="/javascript/windowfunctions.js"></script>
     <script type="text/javascript" src="/components/plt-input.js"></script>
-    <script type="text/javascript" src="/components//lt-sheet.js"></script>
+    <script type="text/javascript" src="/components/lt-sheet.js"></script>
     <link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
     <link rel="stylesheet" href="/components/lt-sheet.css" type="text/css" />
   </head>
