Various Frontend things - page titles - favicon - cookie settings - mark overtime jams

--- a/html/settings/sb_data/index.html
+++ b/html/settings/sb_data/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CRG ScoreBoard: Data Management</title>
+    <title>Data Management | CRG ScoreBoard</title>
 
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
