--- a/html/settings/scoreboard/index.html
+++ b/html/settings/scoreboard/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ScoreBoard Settings</title>
+    <title>Settings | CRG ScoreBoard</title>
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
     <script type="text/javascript" src="/json/WSutils.js"></script>
