--- a/html/settings/twitter/index.html
+++ b/html/settings/twitter/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head><title>CRG ScoreBoard: Twitter Controls</title>
+<html><head><title>Twitter Controls | CRG ScoreBoard</title>
 
 <!--
  Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
