--- a/html/nso/hnso/index.html
+++ b/html/nso/hnso/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Edit Game</title>
+    <title>Edit Game | CRG ScoreBoard</title>
 
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/javascript/utils.js"></script>
