--- a/html/nso/jt/index.html
+++ b/html/nso/jt/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CRG ScoreBoard Mobile Operator Controls</title>
+    <title>Mobile Operator | CRG ScoreBoard</title>
 
     <!--
  Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
