--- a/html/nso/plt/index.html
+++ b/html/nso/plt/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Penalty Lineup Tracker</title>
+    <title>Penalty Lineup Tracker | CRG ScoreBoard</title>
     <!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 		
