--- a/html/settings/file_management/index.html
+++ b/html/settings/file_management/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CRG ScoreBoard: File Management</title>
+    <title>File Management | CRG ScoreBoard</title>
 
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
