--- a/html/settings/rulesets/index.html
+++ b/html/settings/rulesets/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Edit Ruleset</title>
+    <title>Edit Ruleset | CRG ScoreBoard</title>
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
     <script type="text/javascript" src="/javascript/utils.js"></script>
