--- a/html/nso/sbo/index.html
+++ b/html/nso/sbo/index.html
@@ -21,6 +21,9 @@
     <script type="text/javascript" src="/json/WSutils.js"></script>
 
     <script type="text/javascript" src="/components/sk-sheet.js"></script>
+    <script type="text/javascript" src="/components/lt-sheet.js"></script>
+    <script type="text/javascript" src="/components/plt-input.js"></script>
+    <script type="text/javascript" src="/components/sheets-tab.js"></script>
     <script type="text/javascript" src="/components/team-time-tab.js"></script>
     <script type="text/javascript" src="/components/rulesets-tab.js"></script>
     <script type="text/javascript" src="/components/settings-tab.js"></script>
@@ -28,6 +31,9 @@
     <script type="text/javascript" src="/components/igrf-tab.js"></script>
 
     <link rel="stylesheet" href="/components/sk-sheet.css" type="text/css" />
+    <link rel="stylesheet" href="/components/lt-sheet.css" type="text/css" />
+    <link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
+    <link rel="stylesheet" href="/components/sheets-tab.css" type="text/css" />
     <link rel="stylesheet" href="/components/team-time-tab.css" type="text/css" />
     <link rel="stylesheet" href="/components/rulesets-tab.css" type="text/css" />
     <link rel="stylesheet" href="/components/settings-tab.css" type="text/css" />
