--- a/html/index.html
+++ b/html/index.html
@@ -276,7 +276,7 @@
         software or report bugs or feature requests, please visit the
         <a href="https://github.com/rollerderby/scoreboard/releases">project home on GitHub</a>. The Derby Scoreboard
         <a href="https://www.facebook.com/groups/derbyscoreboard/">Facebook group</a> is very active and currently the best way to reach
-        other users and some developers.
+        other users.
       </p>
     </div>
   </body>
