CRG is not affiliated with a specific league or country Also copyright notices in each file are not necessary and experience clearly shows they are not maintained in this project so remove the (outdated) ones sprinkled across the source

--- a/html/index.html
+++ b/html/index.html
@@ -114,6 +114,7 @@
         font-size: 4vmin;
         line-height: 5vmin;
         margin: 0;
+        text-align: center;
       }
       .btn h2 {
         margin: 0 0 10px 0;
@@ -165,7 +166,7 @@
 
   <body>
     <div class="heading">
-      <h1><img src="/Carolina.png" />CRG DERBY SCOREBOARD</h1>
+      <h1>CRG SCOREBOARD</h1>
     </div>
 
     <div class="row">
