--- a/start.html
+++ b/start.html
@@ -47,9 +47,7 @@ p#NotStarted,p#Started { display: none; }
 <body>
 
 <p id="header" >
-<img src="html/Carolina.png" />
-<br/>
-<a>Carolina Rollergirls Browser-based Roller Derby Scoreboard</a>
+<a>CRG Browser-based Roller Derby Scoreboard</a>
 <hr/>
 </p>
 
