Add "Back to index page" link to settings & data management pages

--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="/json/WSutils.js"></script>
   </head>
   <body>
+    <a id="indexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a>
     <div class="Buttons"></div>
     <br />
     <div id="writeAccess">Write access for new devices:</div>
