--- a/html/settings/file_management/index.html
+++ b/html/settings/file_management/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <a id="indexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a><br />
     <div id="tabsDiv"></div>
   </body>
 </html>
