--- a/html/settings/sb_data/index.html
+++ b/html/settings/sb_data/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <a id="indexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a>
     <div id="sbData"></div>
   </body>
 </html>
