--- a/html/settings/twitter/index.html
+++ b/html/settings/twitter/index.html
@@ -8,6 +8,8 @@
 
 <body sbContext="ScoreBoard.Twitter">
 
+<a id="indexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a>
+
 <p class="LogInStatus Center">
 	<button class="TestMode"></button>
 	<button class="Login">Login</button>
