--- a/html/settings/scoreboard/index.html
+++ b/html/settings/scoreboard/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/components/settings-tab.css" type="text/css" />
   </head>
   <body>
+    <a id="indexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a>
     <div id="ScoreBoardSettings" class="ui-widget"></div>
   </body>
 </html>
