--- a/html/index.html
+++ b/html/index.html
@@ -277,7 +277,8 @@
         software or report bugs or feature requests, please visit the
         <a href="https://github.com/rollerderby/scoreboard/releases">project home on GitHub</a>. The Derby Scoreboard
         <a href="https://www.facebook.com/groups/derbyscoreboard/">Facebook group</a> is very active and currently the best way to reach
-        other users.
+        other users. However, currently no developer is on Facebook. In order to reach out to them, it's best to use the
+        <a href="https://github.com/rollerderby/scoreboard/issues">Github Issues Page</a>.
       </p>
     </div>
   </body>
