make PT screen side by side --- AGAIN

--- a/html/nso/pt/index.html
+++ b/html/nso/pt/index.html
@@ -11,10 +11,8 @@
   </head>
   <body>
     <div id="gameAdvance"></div>
-    <div id="pt1" style="width: 50%; vertical-align: top; display: inline-block"></div>
-    <!-- 
-	 -->
-    <div id="pt2" style="width: 50%; vertical-align: top; display: inline-block"></div>
+    <div id="pt1" style="width: 50%; float: left"></div>
+    <div id="pt2" style="width: 50%; float: left"></div>
     <div id="PenaltyEditor"></div>
     <div id="OptionsDialog"></div>
   </body>
