update wiki snapshot

--- a/html/documentation/wiki-snapshot.html
+++ b/html/documentation/wiki-snapshot.html
@@ -1017,9 +1017,24 @@ if("undefined"==typeof jQuery)throw new Error("Bootstrap's JavaScript requires j
 </ul>
 <h3 id="moving-a-star-pass-to-a-later-trip">Moving a star pass to a later trip</h3>
 <ul>
-<li>In the SK sheet click on the last scoring trip before the star pass (or the NI box if the star pass occured during the first scoring trip).</li>
+<li>In the SK sheet click on the last scoring trip before the star pass (or the NI box if the star pass occurred during the first scoring trip).</li>
 <li>In the popup deactivate the &quot;After SP&quot; button.</li>
 <li>Close the popup.</li>
+</ul>
+<h3 id="ending-a-game-prematurely">Ending a game prematurely</h3>
+<ul>
+<li>Click the &quot;End of Period Controls&quot; button</li>
+<li>Click &quot;Unofficial Score&quot;</li>
+</ul>
+<p>Afterwards you can enter a reason for the premature end on the IGRF tab.</p>
+<h3 id="ending-a-period-without-ending-the-game">Ending a period without ending the game</h3>
+<ul>
+<li>If you&#39;re not in a timeout, click &quot;Start Timeout&quot;.</li>
+<li>Click on the period clock time.</li>
+<li>In the upper section of the popup enter 0 into the text box.</li>
+<li>Click &quot;Set&quot; below this box.</li>
+<li>Close the popup.</li>
+<li>Click &quot;End Timeout&quot;.</li>
 </ul>
 <h3 id="setting-up-a-specific-game-state">Setting up a specific game state</h3>
 <p>(e.g. if your primary scoreboard computer broke down and you need to bring in a spare mid-game)</p>
