add back links to game/team/ruleset pages

--- a/html/nso/hnso/index.html
+++ b/html/nso/hnso/index.html
@@ -29,6 +29,7 @@
 
   <body>
     <div id="tabsDiv">
+      <a id="indexLink" href="/settings/sb_data/" class="ui-widget ui-widget-content">Back to overview page</a>
       <ul id="tabBar"></ul>
     </div>
   </body>
