--- a/html/settings/rulesets/index.html
+++ b/html/settings/rulesets/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="/components/rulesets-tab.css" type="text/css" />
   </head>
   <body>
+    <a id="indexLink" href="/settings/sb_data/" class="ui-widget ui-widget-content" style="float: right; border: none"
+      >Back to overview page</a
+    >
     <div id="RulesetsTab" class="ui-widget"></div>
   </body>
 </html>
