clean up roster view + add entry to index page

--- a/html/index.html
+++ b/html/index.html
@@ -180,6 +180,7 @@
           </ul>
           <ul>
             <li><a class="curGame" href="views/wb?game=">Penalty Whiteboard Display</a></li>
+            <li><a href="views/roster">Roster Display</a></li>
             <li><a href="custom/">Custom Screens</a></li>
           </ul>
         </div>
