--- a/html/nso/sbo/index.html
+++ b/html/nso/sbo/index.html
@@ -4,6 +4,7 @@
     <title>Operator | CRG ScoreBoard</title>
 
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/external/gamepad/gamepad.js"></script>
     <script type="text/javascript" src="/javascript/keycontrols.js"></script>
     <script type="text/javascript" src="/javascript/utils.js"></script>
     <script type="text/javascript" src="/javascript/windowfunctions.js"></script>
