link to the documentation from the operator screen

--- a/html/nso/sbo/index.html
+++ b/html/nso/sbo/index.html
@@ -35,6 +35,10 @@
 
   <body>
     <div id="tabsDiv">
+      <div id="helpLink">
+        <a href="https://github.com/rollerderby/scoreboard/wiki/Scoreboard-Operation" target="_blank">Operator help</a>
+        (<a href="/documentation/wiki-snapshot.html#Scoreboard-Operation" target="_blank">Offline version</a>)
+      </div>
       <div id="operatorIdDiv">Operator: <a id="operatorId"></a></div>
       <a id="indexLink" href="/">Back to index page</a>
       <div id="gameAdvance"></div>
