added liberation sans fonts, added font-face rules, fixed font-family declarations

--- a/html/index.html
+++ b/html/index.html
@@ -41,11 +41,16 @@
 
     <style>
       @font-face {
-        font-family: Ubuntu;
-        src: url('/fonts/Ubuntu-R.ttf');
+        font-family: 'LiberationSans';
+        src: url("/fonts/LiberationSans-Regular.ttf") format("truetype");
       }
+      @font-face {
+        font-family: 'LiberationSans';
+        src: url("/fonts/LiberationSans-Bold.ttf") format("truetype");
+        font-weight: bold;
+      } 
       body {
-        font-family: 'Ubuntu' sans-serif;
+        font-family: 'LiberationSans', sans-serif;
         box-sizing: border-box;
         padding: 0;
         margin: 0;
