moved font definition into separate file, included file into pages

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="/json/core.js"></script>
     <link rel="stylesheet" href="external/jquery-ui/css/default/jquery-ui.css" />
     <link rel="stylesheet" href="external/fontawesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="styles/fonts.css" />
 
     <script type="text/javascript">
       $(function () {
@@ -40,17 +41,7 @@
     </script>
 
     <style>
-      @font-face {
-        font-family: 'LiberationSans';
-        src: url("/fonts/LiberationSans-Regular.ttf") format("truetype");
-      }
-      @font-face {
-        font-family: 'LiberationSans';
-        src: url("/fonts/LiberationSans-Bold.ttf") format("truetype");
-        font-weight: bold;
-      } 
       body {
-        font-family: 'LiberationSans', sans-serif;
         box-sizing: border-box;
         padding: 0;
         margin: 0;
