--- a/html/json/state.html
+++ b/html/json/state.html
@@ -2,6 +2,7 @@
   <head>
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
+    <link rel="stylesheet" href="/styles/fonts.css" type="text/css" />
     <style>
       .Key {
         white-space: nowrap;
