--- a/html/nso/pt/index.html
+++ b/html/nso/pt/index.html
@@ -7,6 +7,8 @@
     <script type="text/javascript" src="/json/core.js"></script>
     <script type="text/javascript" src="/javascript/windowfunctions.js"></script>
     <script type="text/javascript" src="/components/plt-input.js"></script>
+
+    <link rel="stylesheet" href="/styles/fonts.css" type="text/css" />
     <link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
   </head>
   <body>
