--- a/html/nso/jt/index.html
+++ b/html/nso/jt/index.html
@@ -13,6 +13,8 @@
     <script type="text/javascript" src="/external/jquery-mobile/jquery.mobile.js"></script>
 
     <script type="text/javascript" src="/javascript/timeconversions.js"></script>
+
+    <link rel="stylesheet" href="/styles/fonts.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <script type="text/javascript" src="index.js"></script>
   </head>
