--- a/html/settings/rulesets/index.html
+++ b/html/settings/rulesets/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="/json/WSutils.js"></script>
     <script type="text/javascript" src="/components/rulesets-tab.js"></script>
 
+    <link rel="stylesheet" href="/styles/fonts.css" type="text/css" />
     <link rel="stylesheet" href="/components/rulesets-tab.css" type="text/css" />
   </head>
   <body>
