--- a/html/settings/scoreboard/index.html
+++ b/html/settings/scoreboard/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="/javascript/utils.js"></script>
     <script type="text/javascript" src="/components/settings-tab.js"></script>
 
+    <link rel="stylesheet" href="/styles/fonts.css" type="text/css" />
     <link rel="stylesheet" href="/components/settings-tab.css" type="text/css" />
   </head>
   <body>
