--- a/html/nso/lt/index.html
+++ b/html/nso/lt/index.html
@@ -6,20 +6,11 @@
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
     <script type="text/javascript" src="/javascript/windowfunctions.js"></script>
-    <script type="text/javascript" src="/components/plt-input.js"></script>
-    <script type="text/javascript" src="/components/lt-sheet.js"></script>
-
-    <link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
-    <link rel="stylesheet" href="/components/lt-sheet.css" type="text/css" />
   </head>
-  <body>
-    <div id="gameAdvance"></div>
-    <div id="input"></div>
-    <div id="sheet" width="100%"></div>
-    <div id="PenaltyEditor"></div>
-    <div id="AnnotationEditor"></div>
-    <div id="FieldingEditor"></div>
-    <div id="OptionsDialog"></div>
-    <div id="UseLTDialog"></div>
+  <body class="GameContext OneTeam">
+    <div sbInclude="/components/game-advance/"></div>
+    <div class="TeamContext" sbInclude="/components/plt-input/" context="lt"></div>
+    <div class="TeamContext" sbInclude="/components/lt-sheet/" sbAfterInclude="initLtSheet" context="lt" width="100%"></div>
+    <div sbInclude="/components/sheet-dialogs/ .Dialog.Lt" sbAfterInclude="initDialogs"></div>
   </body>
 </html>
