--- a/html/nso/pt/index.html
+++ b/html/nso/pt/index.html
@@ -6,15 +6,10 @@
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
     <script type="text/javascript" src="/javascript/windowfunctions.js"></script>
-    <script type="text/javascript" src="/components/plt-input.js"></script>
-
-    <link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
   </head>
-  <body>
-    <div id="gameAdvance"></div>
-    <div id="pt1" style="width: 50%; float: left"></div>
-    <div id="pt2" style="width: 50%; float: left"></div>
-    <div id="PenaltyEditor"></div>
-    <div id="OptionsDialog"></div>
+  <body class="GameContext BothTeams">
+    <div sbInclude="/components/game-advance/"></div>
+    <div sbForeach="Team: 1,2: only" sbInclude="/components/plt-input/" context="pt" style="width: 50%; float: left"></div>
+    <div sbInclude="/components/sheet-dialogs/ .Dialog.Pt" sbAfterInclude="initDialogs"></div>
   </body>
 </html>
